--- a/index.html
+++ b/index.html
@@ -140,62 +140,48 @@
   <div class="container">
     <h2>Challenge Pricing & Plans</h2>
     <p>
-      Choose the evaluation model that best fits your trading style. All challenges include a <strong>90% profit share</strong>, unlimited duration, and live account payouts.
+      Choose the evaluation model that best fits your trading style.
+      All challenges include a <strong>90% profit split</strong>, weekend trading, and 1:30 leverage.
     </p>
 
     <!-- Tabs -->
     <div class="pricing-tabs">
       <button class="tab active" data-target="onephase">1 Step</button>
       <button class="tab" data-target="traditional">Traditional</button>
-      <button class="tab" data-target="accelerated">Accelerated</button>
       <button class="tab" data-target="instant">Instant Funded</button>
     </div>
-    
 
     <!-- === 1-STEP CHALLENGE === -->
     <div class="pricing-grid active" id="onephase">
-      <div class="pricing-card"><h3>$5K Account</h3><p class="price">$57</p><ul><li>Profit Target: 10%</li><li>Max Daily Loss: 4%</li><li>Overall Loss: 6%</li><li>Unlimited Duration</li><li>Weekend Holding: Yes </li></ul></div>
-      <div class="pricing-card"><h3>$10K Account</h3><p class="price">$99</p><ul><li>Profit Target: 10%</li><li>Max Daily Loss: 4%</li><li>Overall Loss: 6%</li><li>Unlimited Duration</li><li>Weekend Holding: Yes</li></ul></div>
-      <div class="pricing-card"><h3>$25K Account</h3><p class="price">$169</p><ul><li>Profit Target: 10%</li><li>Max Daily Loss: 4%</li><li>Overall Loss: 6%</li><li>Unlimited Duration</li><li>Weekend Holding: Yes</li></ul></div>
-      <div class="pricing-card"><h3>$50K Account</h3><p class="price">$299</p><ul><li>Profit Target: 10%</li><li>Max Daily Loss: 4%</li><li>Overall Loss: 6%</li><li>Unlimited Duration</li><li>Weekend Holding: Yes</li></ul></div>
-      <div class="pricing-card"><h3>$100K Account</h3><p class="price">$599</p><ul><li>Profit Target: 10%</li><li>Max Daily Loss: 4%</li><li>Overall Loss: 6%</li><li>Unlimited Duration</li><li>Weekend Holding: Yes</li></ul></div>
-      <div class="pricing-card"><h3>$200K Account</h3><p class="price">$999</p><ul><li>Profit Target: 10%</li><li>Max Daily Loss: 4%</li><li>Overall Loss: 6%</li><li>Unlimited Duration</li><li>Weekend Holding: Yes</li></ul></div>
-      <div class="pricing-card"><h3>$300K Account</h3><p class="price">$1,399</p><ul><li>Profit Target: 10%</li><li>Max Daily Loss: 4%</li><li>Overall Loss: 6%</li><li>Unlimited Duration</li><li>Weekend Holding: Yes</li></ul></div>
-      <div class="pricing-card"><h3>$500K Account</h3><p class="price">$1,999</p><ul><li>Profit Target: 10%</li><li>Max Daily Loss: 4%</li><li>Overall Loss: 6%</li><li>Unlimited Duration</li><li>Weekend Holding: Yes</li></ul></div>
+      <div class="pricing-card"><h3>$10K Account</h3><p class="price">$109</p><ul><li>Profit Target: 8%</li><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 2</li><li>Weekend Trading: Yes</li></ul></div>
+      <div class="pricing-card"><h3>$25K Account</h3><p class="price">$219</p><ul><li>Profit Target: 8%</li><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 2</li><li>Weekend Trading: Yes</li></ul></div>
+      <div class="pricing-card"><h3>$50K Account</h3><p class="price">$399</p><ul><li>Profit Target: 8%</li><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 2</li><li>Weekend Trading: Yes</li></ul></div>
+      <div class="pricing-card"><h3>$100K Account</h3><p class="price">$669</p><ul><li>Profit Target: 8%</li><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 2</li><li>Weekend Trading: Yes</li></ul></div>
+      <div class="pricing-card"><h3>$200K Account</h3><p class="price">$1119</p><ul><li>Profit Target: 8%</li><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 2</li><li>Weekend Trading: Yes</li></ul></div>
+      <div class="pricing-card"><h3>$300K Account</h3><p class="price">$1599</p><ul><li>Profit Target: 8%</li><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 2</li><li>Weekend Trading: Yes</li></ul></div>
+      <div class="pricing-card"><h3>$500K Account</h3><p class="price">$2599</p><ul><li>Profit Target: 8%</li><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 2</li><li>Weekend Trading: Yes</li></ul></div>
     </div>
 
-    <!-- === 2-STEP CHALLENGE === -->
+    <!-- === TRADITIONAL CHALLENGE === -->
     <div class="pricing-grid" id="traditional">
-      <div class="pricing-card"><h3>$5K Account</h3><p class="price">$48</p><ul><li>Phase 1 Target: 8%</li><li>Phase 2 Target: 5%</li><li>Max Daily Loss: 5%</li><li>Overall Loss: 8%</li><li>Unlimited Duration</li></ul></div>
-      <div class="pricing-card"><h3>$10K Account</h3><p class="price">$90</p><ul><li>Phase 1 Target: 8%</li><li>Phase 2 Target: 5%</li><li>Max Daily Loss: 5%</li><li>Overall Loss: 8%</li><li>Unlimited Duration</li></ul></div>
-      <div class="pricing-card"><h3>$25K Account</h3><p class="price">$129</p><ul><li>Phase 1 Target: 8%</li><li>Phase 2 Target: 5%</li><li>Max Daily Loss: 5%</li><li>Overall Loss: 8%</li><li>Unlimited Duration</li></ul></div>
-      <div class="pricing-card"><h3>$50K Account</h3><p class="price">$249</p><ul><li>Phase 1 Target: 8%</li><li>Phase 2 Target: 5%</li><li>Max Daily Loss: 5%</li><li>Overall Loss: 8%</li><li>Unlimited Duration</li></ul></div>
-      <div class="pricing-card"><h3>$100K Account</h3><p class="price">$472</p><ul><li>Phase 1 Target: 8%</li><li>Phase 2 Target: 5%</li><li>Max Daily Loss: 5%</li><li>Overall Loss: 8%</li><li>Unlimited Duration</li></ul></div>
-      <div class="pricing-card"><h3>$200K Account</h3><p class="price">$899</p><ul><li>Phase 1 Target: 8%</li><li>Phase 2 Target: 5%</li><li>Max Daily Loss: 5%</li><li>Overall Loss: 8%</li><li>Unlimited Duration</li></ul></div>
-      <div class="pricing-card"><h3>$300K Account</h3><p class="price">$1,199</p><ul><li>Phase 1 Target: 8%</li><li>Phase 2 Target: 5%</li><li>Max Daily Loss: 5%</li><li>Overall Loss: 8%</li><li>Unlimited Duration</li></ul></div>
-      <div class="pricing-card"><h3>$500K Account</h3><p class="price">$1,700</p><ul><li>Phase 1 Target: 8%</li><li>Phase 2 Target: 5%</li><li>Max Daily Loss: 5%</li><li>Overall Loss: 8%</li><li>Unlimited Duration</li></ul></div>
+      <div class="pricing-card"><h3>$10K Account</h3><p class="price">$89</p><ul><li>Phase 1: 8%</li><li>Phase 2: 5%</li><li>Daily Loss: 4%</li><li>Total Loss: 8%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$25K Account</h3><p class="price">$199</p><ul><li>Phase 1: 8%</li><li>Phase 2: 5%</li><li>Daily Loss: 4%</li><li>Total Loss: 8%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$50K Account</h3><p class="price">$299</p><ul><li>Phase 1: 8%</li><li>Phase 2: 5%</li><li>Daily Loss: 4%</li><li>Total Loss: 8%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$100K Account</h3><p class="price">$459</p><ul><li>Phase 1: 8%</li><li>Phase 2: 5%</li><li>Daily Loss: 4%</li><li>Total Loss: 8%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$200K Account</h3><p class="price">$899</p><ul><li>Phase 1: 8%</li><li>Phase 2: 5%</li><li>Daily Loss: 4%</li><li>Total Loss: 8%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$300K Account</h3><p class="price">$1299</p><ul><li>Phase 1: 8%</li><li>Phase 2: 5%</li><li>Daily Loss: 4%</li><li>Total Loss: 8%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$500K Account</h3><p class="price">$2199</p><ul><li>Phase 1: 8%</li><li>Phase 2: 5%</li><li>Daily Loss: 4%</li><li>Total Loss: 8%</li><li>Min Trading Days: 5</li></ul></div>
     </div>
 
-    <!-- === ACCELERATED === -->
-    <div class="pricing-grid" id="accelerated">
-      <div class="pricing-card"><h3>$5K Account</h3><p class="price">$59</p><ul><li>2-Step Evaluation</li><li>Profit Target: 10%</li><li>Max Loss: 6%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$10K Account</h3><p class="price">$110</p><ul><li>2-Step Evaluation</li><li>Profit Target: 10%</li><li>Max Loss: 6%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$25K Account</h3><p class="price">$179</p><ul><li>2-Step Evaluation</li><li>Profit Target: 10%</li><li>Max Loss: 6%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$50K Account</h3><p class="price">$349</p><ul><li>2-Step Evaluation</li><li>Profit Target: 10%</li><li>Max Loss: 6%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$100K Account</h3><p class="price">$610</p><ul><li>2-Step Evaluation</li><li>Profit Target: 10%</li><li>Max Loss: 6%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$200K Account</h3><p class="price">$1,099</p><ul><li>2-Step Evaluation</li><li>Profit Target: 10%</li><li>Max Loss: 6%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$300K Account</h3><p class="price">$1,599</p><ul><li>2-Step Evaluation</li><li>Profit Target: 10%</li><li>Max Loss: 6%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$500K Account</h3><p class="price">$2,460</p><ul><li>2-Step Evaluation</li><li>Profit Target: 10%</li><li>Max Loss: 6%</li><li>Bi-Weekly Payouts</li></ul></div>
-    </div>
-
-    <!-- === INSTANT FUNDED === -->
+    <!-- === INSTANT FUNDING === -->
     <div class="pricing-grid" id="instant">
-      <div class="pricing-card"><h3>$5K Account</h3><p class="price">$65</p><ul><li>Instant Access (No Challenge)</li><li>Profit Target: 10%</li><li>Max Loss: 5%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$10K Account</h3><p class="price">$99</p><ul><li>Instant Access (No Challenge)</li><li>Profit Target: 10%</li><li>Max Loss: 5%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$25K Account</h3><p class="price">$199</p><ul><li>Instant Access (No Challenge)</li><li>Profit Target: 10%</li><li>Max Loss: 5%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$50K Account</h3><p class="price">$299</p><ul><li>Instant Access (No Challenge)</li><li>Profit Target: 10%</li><li>Max Loss: 5%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$100K Account</h3><p class="price">$539</p><ul><li>Instant Access (No Challenge)</li><li>Profit Target: 10%</li><li>Max Loss: 5%</li><li>Bi-Weekly Payouts</li></ul></div>
-      <div class="pricing-card"><h3>$200K Account</h3><p class="price">$1,100</p><ul><li>Instant Access (No Challenge)</li><li>Profit Target: 10%</li><li>Max Loss: 5%</li><li>Bi-Weekly Payouts</li></ul></div>
+      <div class="pricing-card"><h3>$10K Account</h3><p class="price">$259</p><ul><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$25K Account</h3><p class="price">$499</p><ul><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$50K Account</h3><p class="price">$799</p><ul><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$100K Account</h3><p class="price">$1299</p><ul><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$200K Account</h3><p class="price">$2222</p><ul><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$300K Account</h3><p class="price">$3899</p><ul><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 5</li></ul></div>
+      <div class="pricing-card"><h3>$500K Account</h3><p class="price">$4849</p><ul><li>Max Daily Loss: 4%</li><li>Total Loss: 6%</li><li>Min Trading Days: 5</li></ul></div>
     </div>
   </div>
 </section>
@@ -576,21 +562,26 @@ document.querySelectorAll(".pricing-tabs .tab").forEach(tab => {
 <!-- === SCRIPT === -->
 <script>
 document.addEventListener("DOMContentLoaded", () => {
+
   const pricingData = {
-    "1st Step": {5000:57,10000:99,25000:169,50000:299,100000:599,200000:999,300000:1399,500000:1999},
-    "Traditional": {5000:48,10000:90,25000:129,50000:249,100000:472,200000:899,300000:1199,500000:1700},
-    "Accelerated": {5000:59,10000:110,25000:179,50000:349,100000:610,200000:1099,300000:1599,500000:2460},
-    "Instant Funded": {5000:65,10000:99,25000:199,50000:299,100000:539,200000:1100}
+    "1st Step": {
+      10000:109, 25000:219, 50000:399, 100000:669, 200000:1119, 300000:1599, 500000:2599
+    },
+    "Traditional": {
+      10000:89, 25000:199, 50000:299, 100000:459, 200000:899, 300000:1299, 500000:2199
+    },
+    "Instant Funded": {
+      10000:259, 25000:499, 50000:799, 100000:1299, 200000:2222, 300000:3899, 500000:4849
+    }
+  };
+
+  const idMap = {
+    "1st Step": "firststep",
+    "Traditional": "traditionalObj",
+    "Instant Funded": "instantfunded"
   };
 
   const rates = { USD: 1, EUR: 0.92, YEN: 152.4, CAD: 1.36 };
-  const idMap = {
-  "1st Step": "firststep",
-  "Traditional": "traditionalObj",
-  "Accelerated": "acceleratedObj",
-  "Instant Funded": "instantfunded"
-};
-
 
   function updatePrices() {
     const currency = document.getElementById("currencySelect").value;
@@ -614,6 +605,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
   document.getElementById("currencySelect").addEventListener("change", updatePrices);
   document.getElementById("balanceSelect").addEventListener("change", updatePrices);
+
   updatePrices();
 });
 </script>
